# arcade-new-game

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
mygame/: __init__.py  __main__.py
mygame/resources/: __init__.py
mygame/utils/: __init__.py  frozen.py
